lab1/Test/L1-A-11-28.cmm
float yNVvKSQYTZP4lRezfR ( ) {
  if ( zoxdkqzOUN2zYKSvwx )   return UGqhU0vvnTu0Z4DOlwcd 
    ;
else   while ( QszKcZolCwdVN9Sb )   WvBpnsjRd3 || 
    Z46Vu && eZhsTTOrIzQl == NPCqUksBcSUei / - ! IVR8CnWUqssx0DPrOri 
    [ EiGkN = ZuJJ3FQL4apFNr >= w + odGON0BD7gXYXFcXAJ9 
    ( URgr , I != M + hggtmWMDG1DX0fX8sU / ( = Za4T > 
    ( ef1r6gtOFtABlA < lNGC_LgNh ) ) <= xS0AKrTvyKEDDo4TCo 
    . KDqpuC9bx && ! - 796677257 - - 1310291249.1340854697 
    ) . B2 ] * BW3 ( ) ;


. }
struct KqlC tuRu_Ne3hzp5UrJWA 375174743 ] 
;
int int ;
int ;
int ;
int VdvQIh0Mr03oI2 ( int jEfDma4GliThIt2dTJIg , int 
  UHO ) {
  nDBGoD36GBS33 ;
  HV0QybZLE ;
  qX ;
  if ( tV7l7Dhw02YjjluaZaF8 )   a8gbC ;
else   if ( JWknRU_PG0 ) < {
    int qOANTMd <= ;
    int fbxX ;
    int hJjO ;
    struct CO14djDA9RBQJCjpyjzC {
    }ojwrSpK2LJIs4FUL , XlwbQTy9CRpNkP72gTxT = CCWHNmvaLyvQv 
      ;
    struct {
    }F896KqElvH ;
    ;
  }

}
int u2xJ3m1qpUO , KHlIbuh6pj1oieh 

;
int ;
- 